; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_x86.c_kvm_rdpmc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_x86.c_kvm_rdpmc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }

@VCPU_REGS_RCX = common dso_local global i32 0, align 4
@VCPU_REGS_RAX = common dso_local global i32 0, align 4
@VCPU_REGS_RDX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvm_rdpmc(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.kvm_vcpu*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %3, align 8
  %7 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %8 = load i32, i32* @VCPU_REGS_RCX, align 4
  %9 = call i32 @kvm_register_read(%struct.kvm_vcpu* %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @kvm_pmu_read_pmc(%struct.kvm_vcpu* %10, i32 %11, i32* %5)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* %2, align 4
  br label %28

17:                                               ; preds = %1
  %18 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %19 = load i32, i32* @VCPU_REGS_RAX, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @kvm_register_write(%struct.kvm_vcpu* %18, i32 %19, i32 %20)
  %22 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %23 = load i32, i32* @VCPU_REGS_RDX, align 4
  %24 = load i32, i32* %5, align 4
  %25 = ashr i32 %24, 32
  %26 = call i32 @kvm_register_write(%struct.kvm_vcpu* %22, i32 %23, i32 %25)
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %17, %15
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @kvm_register_read(%struct.kvm_vcpu*, i32) #1

declare dso_local i32 @kvm_pmu_read_pmc(%struct.kvm_vcpu*, i32, i32*) #1

declare dso_local i32 @kvm_register_write(%struct.kvm_vcpu*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
